refactoring
Signed-off-by: Tomoyuki Morita <moritato@amazon.com>